--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,11 @@
     <%= javascript_importmap_tags %>
   </head>
   <body>
-    <%= yield %>
+  
+    <%= render 'home/header' %>
+    <div class="container">
+      <%= yield %>
+    </div>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
