--- a/app/views/friends/_form.html.erb
+++ b/app/views/friends/_form.html.erb
@@ -41,6 +41,13 @@
   </div>
   <br/>
 
+  <div class="field form-group">
+    <%= form.number_field :user_id, id: :friend_user_id,
+    class: 'form-control', value:current_user.id,
+    type: 'hidden'%>
+  </div>
+
+
   <div class="actions">
     <%= form.submit class: 'btn btn-secondary'%>
   </div>
