--- a/app/views/friends/edit.html.erb
+++ b/app/views/friends/edit.html.erb
@@ -5,6 +5,7 @@
 <br>
 
 <div>
-  <%= link_to "Show this friend", @friend, class:'btn btn-secondary'%>
-  <%= link_to "Back to friends", friends_path, class:'btn btn-dark'%>
+
+  <%= button_to 'Delete', @friend, method: :delete,
+                    class: "btn btn-danger"%>
 </div>
