--- a/app/views/friends/index.html.erb
+++ b/app/views/friends/index.html.erb
@@ -1,30 +1,34 @@
-
-<table class="table table-striped table-hover table-bordered">
-  <thead class="thead-dark">
-    <tr>
-      <th>Name</th>
-      <th>Last Name</th>
-      <th>Email</th>
-      <th>Phone</th>
-      <th>Twitter</th>
-      <th colspan="3"> </th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @friends.each do |friend| %>
+<% if user_signed_in?%>
+  <table class="table table-striped table-hover table-bordered">
+    <thead class="thead-dark">
       <tr>
-        <td><%= friend.first_name %></td>
-        <td><%= friend.last_name %></td>
-        <td><%= friend.email %></td>
-        <td><%= friend.phone %></td>
-        <td><%= friend.twitter %></td>
-        <td><%= link_to 'Show', friend%></td>
-        <td><%= link_to 'Edit', edit_friend_path(friend)%></td>
-        <td><%= link_to 'Destroy', method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <th>Name</th>
+        <th>Email</th>
+        <th>Phone</th>
+        <th>Twitter</th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
 
-<%= link_to "New friend", new_friend_path, class:'btn btn-secondary' %>
+    <tbody>
+      <% @friends.each do |friend| %>
+        <%if friend.user == current_user%>
+          <tr>
+            <td><%= link_to friend.first_name + ' ' + friend.last_name, friend%></td>
+            <td><%= friend.email %></td>
+            <td><%= friend.phone %></td>
+            <td><%= friend.twitter %></td>
+            <td><%= button_to 'Delete', friend, method: :delete,
+                    class: "btn btn-outline-danger btn-sm"%></td>
+          </tr>
+        <% end %>
+      <% end %>
+    </tbody>
+  </table>
+
+  <%= link_to "New friend", new_friend_path, class:'btn btn-secondary' %>
+<%else %>
+
+  <h1>Hello World</h1> 
+  <p>This is my first Rails Webpage</p> %>
+
+<%end%>
